--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/nom_input"
+            android:singleLine="true"
             android:hint="@string/nom_hint" />
     </android.support.design.widget.TextInputLayout>
 
@@ -29,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/email_input"
+            android:singleLine="true"
             android:hint="@string/email_hint" />
     </android.support.design.widget.TextInputLayout>
 
@@ -41,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/asignaturas_input"
+            android:singleLine="true"
             android:hint="@string/asignaturas_hint" />
     </android.support.design.widget.TextInputLayout>
 
@@ -50,7 +53,9 @@
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
+            android:inputType="number"
             android:layout_height="40dp"
+            android:singleLine="true"
             android:id="@+id/identificador_input"
             android:hint="@string/identificador_hint" />
     </android.support.design.widget.TextInputLayout>
